[package]
name = "adventofcode2016"
version = "0.1.0"
authors = ["Chris Leech <leech@pobox.com>"]

[dependencies]
scan_fmt = "~0.1.1"
itertools = "~0.5"
rust-crypto = "~0.2.34"
#permutohedron = "~0.2.0"
clap = "~2.13"
#serde_json = "~0.8.0"
#nom="~1.2"
clippy = { version="*", optional = true }
nalgebra = "~0.10"
rustc-serialize = "~0.3"
arrayvec = "~0.3"
num_cpus = "~1.0"
fnv = "~1.0"

[features]
default=[]
